css/_shows.scss
.shows {
    background: $green-color;

    &__title {
        color: $primary-color;
        font-size: $subtitlesize;
        font-family: $primaryfont;
        font-weight: bold;
        text-align: center;
        padding: 10% 0;
    }

    &__adhd {

        text-align: center;
        flex-direction: column;


        h3 {
            color: $secondary-color;
            font-family: $headerfont;
            font-size: $titles;
            padding-bottom: 1.25em;
            text-align: center;
            // font-weight: 700;
        }

        img {
            width: 80%;
            text-align: center;
            margin-bottom: 3em;
            border-radius: 10px;
            border: solid $primary-color 5px;
            box-shadow: 10px 10px 10px $secondary-color;

        }

        p {
            font-size: $paragraphsize;
            font-family: $secondaryfont;
            color: #FFD700;
            line-height: 1.5;
            text-align: center;
        }

        .adhd-video {
            margin-top: 2em;
            margin-bottom: 10em;
            border: solid $primary-color 5px;
            width: 100%;
        }

    }

    .feedback {
        font-size: 1.7rem;
        font-family: $primaryfont;
        font-weight: bold;
        color: $primary-color;
        padding-top: 1.4em;
    }

    &__flowerpot {
        margin-top: 10em;
        text-align: center;

        &__title {
            color: $secondary-color;
            font-family: $headerfont;
            font-size: $titles;
            font-weight: 500;
            padding-bottom: 1.25em;
            text-align: center;
        }

        &__text,
        .review {
            color: $secondary-color;
            font-size: $paragraphsize;
            font-family: $secondaryfont;
            font-weight: 800;
            line-height: 1.9;
            text-align: center;
            margin-bottom: 5em;


        }
    }

    .flowerpot-img {
        border-radius: 100px;
        width: 80%;
        margin-bottom: 3em;
        border: solid $secondary-color 5px;
        box-shadow: 10px 10px 20px $darkviolet;
    }

    &__weareallstardust {
        margin-top: 10em;
        text-align: center;

        h3 {
            color: $primary-color;
            font-family: $headerfont;
            font-size: $titles;
            padding-bottom: 1.25em;
            text-align: center;
        }

        p {
            font-size: $paragraphsize;
            font-family: $secondaryfont;
            color: #FFD700;
            line-height: 1.9;
            text-align: center;
            margin-bottom: 3em;
        }

        .stardust-review {
            margin-bottom: 8em;
        }

        .stardust-vid {
            width: 100%;
            padding-bottom:1.5em;
        }
    }

    &__bastards {
        margin-top: 10em;
        text-align: center;

        h3,
        h4 {
            color: $secondary-color;
            font-family: $headerfont;
            font-size: $titles;
            font-weight: 500;
            padding-bottom: 1.25em;
            text-align: center;
        }

        p {
            color: $secondary-color;
            font-size: $paragraphsize;
            font-family: $secondaryfont;
            font-weight: 800;
            line-height: 2;
            text-align: center;
            margin-bottom: 4em;
        }

        ul {
            // text-align: start;
            margin-left: 0;
            list-style: none;
            color: $secondary-color;
            font-size: $paragraphsize;
            font-family: $secondaryfont;
            margin-bottom: 4em;

            .mask:hover {
                color: $darkviolet;
            }

            li {
                text-align: start;
            }

            i {
                padding-right: 1em;
            }

        }

        img {
            width: 90%;
            margin-bottom: 10em;
            border-radius: 50px;
            border: solid $secondary-color 5px;
            box-shadow: 10px 10px 20px $darkviolet;

        }
    }

}


#testimonal-slider {
    text-align: center;
    padding-bottom: 6em;

    .carousel-item  {
        max-height: 800px;
    }

    .test-slide {
        
        &__1, &__3, &__5  {
            background: $secondary-color;
            background-image: linear-gradient($darkviolet, #9370DB);
            
            color: $primary-color;
            font-family: $secondaryfont;
            h3 {
                padding: 1.5em 0;
                
            }
            h5 {
                padding-bottom: 1.5em;
                font-size:1rem;
            }
            p {
                line-height: 2;
                padding: 0 0.5em;
            }
        }
        &__2, &__4, &__6  {
            background: $primary-color;
            background-image: linear-gradient(#f6f949, #ffc107);
            color: $secondary-color;
            font-family: $secondaryfont;
            h3 {
                padding: 1.5em 0;
                
            }
            h5 {
                padding-bottom: 1.5em;
                font-size:1rem;
            }
            p {
                line-height: 2;
                padding: 0 0.5em;
            }
        }

    }
}

